force-app/main/default/objects/AssessmentSheet__c/AssessmentSheet__c.object-meta.xml
<CustomObject>
    <label>Assessment Sheet</label>
    <nameField>
        <displayFormat>AS_{YYYYMMDD}_{000}</displayFormat>
        <label>Assessment Sheet Number</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>