force-app/main/default/objects/AssessmentSheet__c/fields/AssessmentEndDate__c.field-meta.xml
<CustomField>
    <fullName>AssessmentEndDate__c</fullName>
    <formula>AssessmentMasterId__r.AssessmentEndDate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Assessment End Date</label>
    <type>Date</type>
</CustomField>