force-app/main/default/objects/AssessmentSheet__c/fields/AssessmentMasterId__c.field-meta.xml
<CustomField>
    <fullName>AssessmentMasterId__c</fullName>
    <label>Assessment Master</label>
    <referenceTo>AssessmentMaster__c</referenceTo>
    <relationshipLabel>Assessment Sheet</relationshipLabel>
    <relationshipName>Assessment_Sheet</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>