force-app/main/default/objects/AssessmentSheet__c/fields/AssessmentStartDate__c.field-meta.xml
<CustomField>
    <fullName>AssessmentStartDate__c</fullName>
    <formula>AssessmentMasterId__r.AssessmentStartDate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Assessment Start Date</label>
    <type>Date</type>
</CustomField>