force-app/main/default/objects/AssessmentSheet__c/fields/AssessmentTargetId__c.field-meta.xml
<CustomField>
    <fullName>AssessmentTargetId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assessment Target</label>
    <referenceTo>AssessmentTarget__c</referenceTo>
    <relationshipLabel>Assessment Sheet</relationshipLabel>
    <relationshipName>Assessment_Sheet</relationshipName>
    <type>Lookup</type>
</CustomField>