force-app/main/default/objects/AssessmentSheet__c/fields/TotalScore__c.field-meta.xml
<CustomField>
    <fullName>TotalScore__c</fullName>
    <label>Total Score</label>
    <summarizedField>AssessmentSheetSection__c.Score__c</summarizedField>
    <summaryForeignKey>AssessmentSheetSection__c.AssessmentResultHeader__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>